--- a/extracurricular.htm
+++ b/extracurricular.htm
@@ -76,53 +76,12 @@
               Multiple trails (Acadia National Park)<br>
               Multiple trails (Great Smokey Mountain National Park)<br>
             </p>
-            <p>Some interesting places I have biked to:<br>
-              <a href="http://imgur.com/a/3Wz8j">The Great Falls of the
-                Passaic River</a><br>
-              <a href="http://imgur.com/a/EEoj7#0">South Mountain
-                Reservation</a><br>
-              <a href="http://imgur.com/a/cVY7v#0">Eagle Rock
-                Reservation</a><br>
+            <p>Some interesting places I have biked through:<br>
+              <a href="https://youtu.be/o0iywVIZWvE">Cycling around North Jersey</a><br>
             </p>
-            <p>Here are two videos of my bike commute:<br>
+            <p>Here is a video of my bike commute:<br>
               <a
-                href="http://www.youtube.com/watch?v=h15hkzCV7u4&amp;feature=plcp">Kearny
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                to Newark</a><br>
-              <a
-                href="http://www.youtube.com/watch?v=JxJoivdjlpk&amp;feature=plcp">Newark
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                to Kearny</a><br>
+                href="https://youtu.be/QBkgyeqa0SM">Kearny to Newark</a><br>
             </p>
             <p>I used to play football in high school, but haven't had
               much time for it these days.&nbsp; Now I'm more of a
