--- a/index.htm
+++ b/index.htm
@@ -94,9 +94,9 @@
                 rgb(255, 255, 255); display: inline !important; float:
                 none; "></span></p>
             <hr>
-            <h3>I'm the one on the right.</h3>
-            <h3><img alt="" src="http://i.imgur.com/qc0iAMk.jpg"
-                height="1536" width="2048"><br>
+            <h3>Mount Guyot during a 23 mile - single day hike.</h3>
+            <h3><img alt="" src="http://i.imgur.com/srlc5kz.jpg"
+                height="2731" width="2048"><br>
             </h3>
           </div>
           <div class="four columns">
@@ -140,7 +140,7 @@
     <!-- Das Footer -->
     <div id="copyright">
       <div class="row">
-        <div class="four columns">Last Updated: Sunday, June 5, 2016<br>
+        <div class="four columns">Last Updated: Monday, June 27, 2016<br>
         </div>
         &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
