--- a/presentations.htm
+++ b/presentations.htm
@@ -67,6 +67,11 @@
           	ol { list-style-type: upper-roman }   
      	    </style>
             <ol reversed="reversed">
+                <li><b>A Tempest in The Mathematics of Time: A brief history
+                    of chaos and its appearance in walking droplets and electronic
+                    circuits.</b><br>
+                NJIT Graduate Student Seminar, New Jersey Institute of
+                    Technology, Newark, NJ, June 21, 2016</li>
               <li><b>Neimark-Sacker Bifurcation and Evidence of Chaos in
                   a Discrete Dynamical Model of Walkers.</b><br>
                 American Physical Society 68th Annual Division of Fluid
