--- a/publications.htm
+++ b/publications.htm
@@ -65,11 +65,6 @@
             <hr>
             <h3>Forthcoming:</h3>
             <ol reversed="reversed">
-              <li><b>Neimark--Sacker bifurcation and evidence of chaos
-                  in a discrete dynamical model of walkers</b>
-                (submitted to IJBC) [<a
-                  href="http://arxiv.org/abs/1507.08057">Arxiv</a>]<br>
-                <u>Aminur Rahman</u> and Denis Blackmore </li>
               <li> <b>R-S flip-flop circuit dynamics revisited</b>
                 (submitted to chaos) [<a
                   href="http://arxiv.org/abs/1507.03065">Arxiv</a>]<br>
@@ -80,6 +75,12 @@
           	ol { list-style-type: upper-roman }   
      	    </style>
             <ol reversed="reversed">
+                <li><b>Neimark--Sacker bifurcation and evidence of chaos
+                    in a discrete dynamical model of walkers</b>.<br>
+                <u>Aminur Rahman</u> and Denis Blackmore<br>
+                Chaos, Solitons &amp; Fractal, (2016), <a
+                    href="http://www.sciencedirect.com/science/article/pii/S0960077916302090">doi:10.1016/j.chaos.2009.02.032</a>.
+                <a href="http://arxiv.org/abs/1507.08057">[Arxiv]</a></li>
               <li><b>A mechanical analog of the two-bounce resonance of
                   solitary waves: modeling and experiment.</b> <br>
                 Roy H. Goodman, <u>Aminur Rahman</u>, Michael J.
