--- a/teaching.htm
+++ b/teaching.htm
@@ -62,6 +62,10 @@
       <section role="main">
         <div class="row">
           <div class="eight columns">
+              <p>
+              I am honored to be the recipient of the 2016 NJIT Excellence
+                  in Teaching award.
+              <p>
             <hr>
             <h3>As Instructor:</h3>
             <ol reversed="reversed">
